--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,18 @@
-# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
-# Fabric Properties
-# check these on https://fabricmc.net/develop
-minecraft_version=1.21
-yarn_mappings=1.21+build.9
-loader_version=0.15.11
+# https://fabricmc.net/develop
+minecraft_version=1.21.8
+yarn_mappings=1.21.8+build.1
+loader_version=0.16.14
+loom_version=1.11-SNAPSHOT
+
+# Fabric API
+fabric_version=0.130.0+1.21.8
 
 # Mod Properties
-mod_version=1.2.2
+mod_version=1.2.3
 maven_group=io.github.redvortexdev.skingrabber
 archives_base_name=skingrabber
 
-# Dependencies
-fabric_version=0.100.7+1.21
+
